--- a/forexglobal/sass/blocks/nav.scss
+++ b/forexglobal/sass/blocks/nav.scss
@@ -17,9 +17,25 @@
   list-style: none;
   
   a {
+    position: relative;
     color: $mc;
     font-size: 18px;
     font-family: 'SFUIDisplay-Thin', sans-serif;
     text-decoration: none;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      right: -10px;
+      width: 6px;
+      height: 3px;
+      background: url('../img/nav-arrow.svg') no-repeat top;
+      transition: 0.2s;
+    }
+    
+    &:hover::after {
+      transform: rotate(180deg);
+    }
   }
 }
