--- a/mb/sass/style.scss
+++ b/mb/sass/style.scss
@@ -25,3 +25,5 @@
 @import 'blocks/contact-us';
 @import 'blocks/account';
 @import 'blocks/articles';
+@import 'blocks/strategy';
+@import 'blocks/filters';
