--- a/forexglobal/sass/blocks/account.scss
+++ b/forexglobal/sass/blocks/account.scss
@@ -6,8 +6,8 @@
   margin: 0 0 60px 0;
   color: $sc;
   font-size: 60px;
-  font-weight: normal;
-  font-family: 'SFUIDisplay-Thin', sans-serif;
+  font-weight: 100;
+  // font-family: 'SFUIDisplay-Thin', sans-serif;
   text-align: center;
 }
 
@@ -27,8 +27,8 @@
   h2 {
     margin: 0;
     font-size: 30px;
-    font-weight: normal;
-    font-family: 'SFUIDisplay-Medium', sans-serif;
+    font-weight: 500;
+    // font-family: 'SFUIDisplay-Medium', sans-serif;
     text-align: center;
   }
   
@@ -42,15 +42,16 @@
   
   b {
     display: block;
-    font-weight: normal;
-    font-family: 'SFUIDisplay-Medium', sans-serif;
+    font-weight: 500;
+    // font-family: 'SFUIDisplay-Medium', sans-serif;
     text-align: center;
   }
   
   ul {
     margin: 30px 0 35px 0;
     padding: 0;
-    font-family: 'SFUIDisplay-Thin', sans-serif;
+    font-weight: 100;
+    // font-family: 'SFUIDisplay-Thin', sans-serif;
     list-style-image: url('../img/list.svg');
   }
   
@@ -61,7 +62,8 @@
     padding: 9px 0;
     color: $mc;
     font-size: 18px;
-    font-family: 'SFUIDisplay-Thin', sans-serif;
+    font-weight: 100;
+    // font-family: 'SFUIDisplay-Thin', sans-serif;
     text-align: center;
     text-decoration: none;
     border: 1px solid $mc;
