--- a/forexglobal/sass/blocks/edge.scss
+++ b/forexglobal/sass/blocks/edge.scss
@@ -19,14 +19,15 @@
     padding: 0 0 9px 0;
     color: #fff;
     font-size: 30px;
-    font-weight: normal;
-    font-family: 'SFUIDisplay-Medium', sans-serif;
+    font-weight: 500;
+    // font-family: 'SFUIDisplay-Medium', sans-serif;
     border-bottom: 1px solid $mc;
   }
   
   p {
     margin: 10px 0 0 0;
     color: #fff;
-    font-family: 'SFUIDisplay-Thin', sans-serif;
+    font-weight: 100;
+    // font-family: 'SFUIDisplay-Thin', sans-serif;
   }
 }
