--- a/forexglobal/sass/blocks/form.scss
+++ b/forexglobal/sass/blocks/form.scss
@@ -16,14 +16,15 @@
     p {
       margin: 0 0 5px 0;
       color: #fff;
-      font-family: 'SFUIDisplay-Medium', sans-serif;
+      font-weight: 500;
+      // font-family: 'SFUIDisplay-Medium', sans-serif;
     }
     
     b {
       color: #fff;
       font-size: 30px;
-      font-weight: normal;
-      font-family: 'SFUIDisplay-Medium', sans-serif;
+      font-weight: 500;
+      // font-family: 'SFUIDisplay-Medium', sans-serif;
     }
     
     hr {
@@ -38,7 +39,9 @@
       margin: 0 0 10px 0;
       padding: 8px 15px;
       font-size: 18px;
-      font-family: 'SFUIDisplay-Thin', sans-serif;
+      font-weight: 100;
+      font-family: inherit;
+      // font-family: 'SFUIDisplay-Thin', sans-serif;
       border: 2px solid #fff;
       border-radius: 3px;
       transition: 0.3s;
@@ -58,7 +61,9 @@
       margin: 0 0 10px 0;
       color: $sc;
       font-size: 18px;
-      font-family: 'SFUIDisplay-Thin', sans-serif;
+      font-weight: 100;
+      font-family: inherit;
+      // font-family: 'SFUIDisplay-Thin', sans-serif;
       border: 2px solid #fff;
       border-radius: 3px;
       text-indent: 5px;
@@ -74,7 +79,9 @@
       padding: 10px 0;
       color: $sc;
       font-size: 18px;
-      font-family: 'SFUIDisplay-Medium', sans-serif;
+      font-weight: 500;
+      font-family: inherit;
+      // font-family: 'SFUIDisplay-Medium', sans-serif;
       border: none;
       border-radius: 3px;
       background: $mc;
