--- a/forexglobal/sass/global/fonts.scss
+++ b/forexglobal/sass/global/fonts.scss
@@ -1,188 +1,80 @@
 @font-face {
-    font-family: 'SFUIDisplay-Medium';
-    src: local('SF UI Display Medium'), local('SFUIDisplay-Medium'),
-        url('SFUIDisplay-Medium.woff2') format('woff2'),
-        url('SFUIDisplay-Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Thin'), local('SFUIDisplay-Thin'),
+      url('../fonts/SFUIDisplay-Thin.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIText-BoldItalic';
-    src: local('SF UI Text Bold Italic'), local('SFUIText-BoldItalic'),
-        url('SFUIText-BoldItalic.woff2') format('woff2'),
-        url('SFUIText-BoldItalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Ultralight'), local('SFUIDisplay-Ultralight'),
+      url('../fonts/SFUIDisplay-Ultralight.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Ultralight.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIDisplay-Light';
-    src: local('SF UI Display Light'), local('SFUIDisplay-Light'),
-        url('SFUIDisplay-Light.woff2') format('woff2'),
-        url('SFUIDisplay-Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Light'), local('SFUIDisplay-Light'),
+      url('../fonts/SFUIDisplay-Light.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIDisplay-Ultralight';
-    src: local('SF UI Display Ultralight'), local('SFUIDisplay-Ultralight'),
-        url('SFUIDisplay-Ultralight.woff2') format('woff2'),
-        url('SFUIDisplay-Ultralight.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Regular'), local('SFUIDisplay-Regular'),
+      url('../fonts/SFUIDisplay-Regular.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIText-Italic';
-    src: local('SF UI Text Italic'), local('SFUIText-Italic'),
-        url('SFUIText-Italic.woff2') format('woff2'),
-        url('SFUIText-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Medium'), local('SFUIDisplay-Medium'),
+      url('../fonts/SFUIDisplay-Medium.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIDisplay-Regular';
-    src: local('SF UI Display Regular'), local('SFUIDisplay-Regular'),
-        url('SFUIDisplay-Regular.woff2') format('woff2'),
-        url('SFUIDisplay-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Semibold'), local('SFUIDisplay-Semibold'),
+      url('../fonts/SFUIDisplay-Semibold.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Semibold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIText-Light';
-    src: local('SF UI Text Light'), local('SFUIText-Light'),
-        url('SFUIText-Light.woff2') format('woff2'),
-        url('SFUIText-Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Bold'), local('SFUIDisplay-Bold'),
+      url('../fonts/SFUIDisplay-Bold.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIText-Medium';
-    src: local('SF UI Text Medium'), local('SFUIText-Medium'),
-        url('SFUIText-Medium.woff2') format('woff2'),
-        url('SFUIText-Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Heavy'), local('SFUIDisplay-Heavy'),
+      url('../fonts/SFUIDisplay-Heavy.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Heavy.woff') format('woff');
+  font-weight: 800;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'SFUIText-Regular';
-    src: local('SF UI Text Regular'), local('SFUIText-Regular'),
-        url('SFUIText-Regular.woff2') format('woff2'),
-        url('SFUIText-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIDisplay-Black';
-    src: local('SF UI Display Black'), local('SFUIDisplay-Black'),
-        url('SFUIDisplay-Black.woff2') format('woff2'),
-        url('SFUIDisplay-Black.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIText-Bold';
-    src: local('SF UI Text Bold'), local('SFUIText-Bold'),
-        url('SFUIText-Bold.woff2') format('woff2'),
-        url('SFUIText-Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIDisplay-Semibold';
-    src: local('SF UI Display Semibold'), local('SFUIDisplay-Semibold'),
-        url('SFUIDisplay-Semibold.woff2') format('woff2'),
-        url('SFUIDisplay-Semibold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIText-Heavy';
-    src: local('SF UI Text Heavy'), local('SFUIText-Heavy'),
-        url('SFUIText-Heavy.woff2') format('woff2'),
-        url('SFUIText-Heavy.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIText-LightItalic';
-    src: local('SF UI Text Light Italic'), local('SFUIText-LightItalic'),
-        url('SFUIText-LightItalic.woff2') format('woff2'),
-        url('SFUIText-LightItalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIText-SemiboldItalic';
-    src: local('SF UI Text Semibold Italic'), local('SFUIText-SemiboldItalic'),
-        url('SFUIText-SemiboldItalic.woff2') format('woff2'),
-        url('SFUIText-SemiboldItalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIText-HeavyItalic';
-    src: local('SF UI Text Heavy Italic'), local('SFUIText-HeavyItalic'),
-        url('SFUIText-HeavyItalic.woff2') format('woff2'),
-        url('SFUIText-HeavyItalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIText-MediumItalic';
-    src: local('SF UI Text Medium Italic'), local('SFUIText-MediumItalic'),
-        url('SFUIText-MediumItalic.woff2') format('woff2'),
-        url('SFUIText-MediumItalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIDisplay-Bold';
-    src: local('SF UI Display Bold'), local('SFUIDisplay-Bold'),
-        url('SFUIDisplay-Bold.woff2') format('woff2'),
-        url('SFUIDisplay-Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIDisplay-Thin';
-    src: local('SF UI Display Thin'), local('SFUIDisplay-Thin'),
-        url('SFUIDisplay-Thin.woff2') format('woff2'),
-        url('SFUIDisplay-Thin.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIText-Semibold';
-    src: local('SF UI Text Semibold'), local('SFUIText-Semibold'),
-        url('SFUIText-Semibold.woff2') format('woff2'),
-        url('SFUIText-Semibold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SFUIDisplay-Heavy';
-    src: local('SF UI Display Heavy'), local('SFUIDisplay-Heavy'),
-        url('SFUIDisplay-Heavy.woff2') format('woff2'),
-        url('SFUIDisplay-Heavy.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'SF UI Display';
+  src: local('SF UI Display Black'), local('SFUIDisplay-Black'),
+      url('../fonts/SFUIDisplay-Black.woff2') format('woff2'),
+      url('../fonts/SFUIDisplay-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
 }
